@@ -4,6 +4,8 @@
 Release - 9.13-2.00alpha (Release candidate, cross-platform, based on zip/p7zip 9.13 beta)
 
 	* Bind 7-Zip 9.13 beta
+	* Archive creation
+		- Creating archives: 7z, BZip2, Tar, Zip
 
 
 Release - 4.65-1.03rc-extr-only (Release candidate, extraction only, cross-platform, based on zip/p7zip 4.65)
